@@ -21,14 +21,15 @@
  */
 package org.wildfly.extension.undertow;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
 import org.jboss.as.controller.AttributeDefinition;
+import org.jboss.as.controller.PathElement;
 import org.jboss.as.controller.PersistentResourceDefinition;
 import org.jboss.as.controller.SimpleAttributeDefinition;
 import org.jboss.as.controller.SimpleAttributeDefinitionBuilder;
+import org.jboss.as.controller.SimpleResourceDefinition;
 import org.jboss.as.controller.access.constraint.SensitivityClassification;
 import org.jboss.as.controller.access.management.AccessConstraintDefinition;
 import org.jboss.as.controller.access.management.SensitiveTargetAccessConstraintDefinition;
@@ -43,6 +44,7 @@ import org.jboss.dmr.ValueExpression;
  * @author Tomaz Cerar (c) 2013 Red Hat Inc.
  */
 class AccessLogDefinition extends PersistentResourceDefinition {
+    static final PathElement PATH_ELEMENT = PathElement.pathElement(Constants.SETTING, Constants.ACCESS_LOG);
     static final RuntimeCapability<Void> ACCESS_LOG_CAPABILITY = RuntimeCapability.Builder.of(Capabilities.CAPABILITY_ACCESS_LOG, true, AccessLogService.class)
               .setDynamicNameMapper(DynamicNameMappers.GRAND_PARENT)
               .build();
@@ -110,7 +112,7 @@ class AccessLogDefinition extends PersistentResourceDefinition {
             .setRestartAllServices()
             .build();
 
-    static final Collection<SimpleAttributeDefinition> ATTRIBUTES = Arrays.asList(
+    static final Collection<AttributeDefinition> ATTRIBUTES = List.of(
             // IMPORTANT -- keep these in xsd order as this order controls marshalling
             WORKER,
             PATTERN,
@@ -123,12 +125,10 @@ class AccessLogDefinition extends PersistentResourceDefinition {
             EXTENDED,
             PREDICATE
     );
-    static final AccessLogDefinition INSTANCE = new AccessLogDefinition();
     private final List<AccessConstraintDefinition> accessConstraints;
 
-
-    private AccessLogDefinition() {
-        super(new Parameters(UndertowExtension.PATH_ACCESS_LOG, UndertowExtension.getResolver(Constants.ACCESS_LOG))
+    AccessLogDefinition() {
+        super(new SimpleResourceDefinition.Parameters(PATH_ELEMENT, UndertowExtension.getResolver(PATH_ELEMENT.getValue()))
                 .setAddHandler(AccessLogAdd.INSTANCE)
                 .setRemoveHandler(AccessLogRemove.INSTANCE)
                 .setCapabilities(ACCESS_LOG_CAPABILITY)
